--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "phosphor-vue": "^4.4.0",
+    "vue": "^3.2.31"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
