--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "phosphor-vue": "^4.4.0",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-material-design-icons": "^5.0.0",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
